--- a/Password Manager/AutoFillExtension/AutoFillExtension.entitlements
+++ b/Password Manager/AutoFillExtension/AutoFillExtension.entitlements
@@ -8,5 +8,9 @@
 	<array>
 		<string>group.com.ag.password.manager</string>
 	</array>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)W3KLYB8DPV.group.com.ag.password.manager</string>
+	</array>
 </dict>
 </plist>
