--- a/Password Manager/Password Manager/Password Manager.entitlements
+++ b/Password Manager/Password Manager/Password Manager.entitlements
@@ -6,11 +6,11 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.ag.password.manager</string>
+		<string>group.com.ag.password.saver</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>W3KLYB8DPV.com.ag.password.manager</string>
+		<string>W3KLYB8DPV.com.ag.password.saver</string>
 	</array>
 </dict>
 </plist>
