--- a/Password Manager/Podfile
+++ b/Password Manager/Podfile
@@ -11,7 +11,7 @@ target 'Password Manager' do
   pod 'Firebase/Analytics'
   pod 'Firebase/RemoteConfig'
   pod 'KeychainAccess'
-  pod 'AppLocker'
+  pod 'AppLocker', :git => 'https://github.com/Ryasnoy/AppLocker.git', :commit => '411725a'
 end
 
 target 'AutoFillExtension' do
