--- a/Password Manager/Password Manager/Info.plist
+++ b/Password Manager/Password Manager/Info.plist
@@ -16,6 +16,8 @@
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>$(PRODUCT_NAME) need an access to your FaceID to authorize into the Vault</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
