--- a/Password Manager/Podfile
+++ b/Password Manager/Podfile
@@ -11,6 +11,7 @@ target 'Password Manager' do
   pod 'Firebase/Analytics'
   pod 'Firebase/RemoteConfig'
   pod 'KeychainAccess'
+  pod 'lottie-ios'
   pod 'AppLocker', :git => 'https://github.com/Ryasnoy/AppLocker.git', :commit => '411725a'
 end
 
